objects/Activity.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Tour__c</fullName>
        <formula>ISPICKVAL( Activity_Type__c , &apos;Tour - Initial&apos;)||
ISPICKVAL( Activity_Type__c , &apos;Tour - Repeat&apos;)||
ISPICKVAL( Activity_Type__c , &apos;Tour - Virtual&apos;)||
ISPICKVAL( Activity_Type__c , &apos;Walk In (Tour)&apos;) ||
Contains(text(Activity_Type__c), &apos;Tour&apos;) ||
Contains(text(Activity_Type__c), &apos;Visit&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tour</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deposits__c</fullName>
        <formula>If (ISPICKVAL( Activity_Type__c ,&apos;Deposit&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Move_Ins__c</fullName>
        <formula>IF(ISPICKVAL(Activity_Type__c ,&apos;Move In&apos;), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Move Ins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <label>Community</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Pending__c</fullName>
        <formula>if (ISBLANK(TEXT(Result_Code__c)), If ( IsTask , if ( ISPICKVAL(Status, &apos;Closed&apos;) ||  ISPICKVAL(Status, &apos;Completed&apos;), false, true), true ), false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appointment__c</fullName>
        <formula>ISPICKVAL( Activity_Type__c ,&apos;Appointment Initial&apos;)||
ISPICKVAL( Activity_Type__c ,&apos;Appointment Off Site&apos;)||
ISPICKVAL( Activity_Type__c ,&apos;Appointment Subsequent&apos;)||
ISPICKVAL( Activity_Type__c ,&apos;Outreach Appointment&apos;) ||
Contains(text(Activity_Type__c), &apos;Tour&apos;) ||
Contains(text(Activity_Type__c), &apos;Visit&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Complete__c</fullName>
        <formula>NOT(if (ISBLANK(TEXT(Result_Code__c)), If ( IsTask , if (ISPICKVAL(Status, &apos;Completed&apos;), false, true), true ), false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Year__c</fullName>
        <formula>TEXT( YEAR( Activity_Complete_Date__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result_Code__c</fullName>
        <label>Result Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Follow Up Email Sent</fullName>
                </value>
                <value>
                    <fullName>Follow Up Scheduled</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Rescheduled</fullName>
                </value>
                <value>
                    <fullName>RSVP</fullName>
                </value>
                <value>
                    <fullName>Scheduled Appointment</fullName>
                </value>
                <value>
                    <fullName>Social Media MSG Sent or Comment</fullName>
                </value>
                <value>
                    <fullName>Take off call list</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Tours__c</fullName>
        <formula>If ( Tour__c , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Tours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Month__c</fullName>
        <formula>CASE( MONTH( Activity_Complete_Date__c) ,
1,&quot;01 January&quot;,
2,&quot;02 February&quot;,
3,&quot;03 March&quot;,
4,&quot;04 April&quot;,
5,&quot;05 May&quot;,
6,&quot;06 June&quot;,
7,&quot;07 July&quot;,
8,&quot;08 August&quot;,
9,&quot;09 September&quot;,
10,&quot;10 October&quot;,
11,&quot;11 November&quot;,
12,&quot;12 December&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Sales Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assessment</fullName>
                </value>
                <value>
                    <fullName>Call In</fullName>
                </value>
                <value>
                    <fullName>Call Out</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Closing Tour</fullName>
                </value>
                <value>
                    <fullName>Community Experience</fullName>
                </value>
                <value>
                    <fullName>Deposit</fullName>
                </value>
                <value>
                    <fullName>EBD Call In</fullName>
                </value>
                <value>
                    <fullName>EBD Call Out</fullName>
                </value>
                <value>
                    <fullName>EBD Presentation</fullName>
                </value>
                <value>
                    <fullName>EBD Tour</fullName>
                </value>
                <value>
                    <fullName>Email In</fullName>
                </value>
                <value>
                    <fullName>Email Out</fullName>
                </value>
                <value>
                    <fullName>Home Visit</fullName>
                </value>
                <value>
                    <fullName>Initial Call In</fullName>
                </value>
                <value>
                    <fullName>Initial Email In</fullName>
                </value>
                <value>
                    <fullName>Initial Mail In</fullName>
                </value>
                <value>
                    <fullName>Initial Tour</fullName>
                </value>
                <value>
                    <fullName>Initial Walk In</fullName>
                </value>
                <value>
                    <fullName>Initial Walk In Tour</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Mail In</fullName>
                </value>
                <value>
                    <fullName>MAIL OUT-COMMUNITY NEWSLETTER</fullName>
                </value>
                <value>
                    <fullName>Mail Out - Personal Mail</fullName>
                </value>
                <value>
                    <fullName>Move In</fullName>
                </value>
                <value>
                    <fullName>Move Out</fullName>
                </value>
                <value>
                    <fullName>Post-Deposit Tour</fullName>
                </value>
                <value>
                    <fullName>Resident Tour</fullName>
                </value>
                <value>
                    <fullName>Tour</fullName>
                </value>
                <value>
                    <fullName>Waitlist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_utm_term__c</fullName>
        <label>Form utm term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Tours__c</fullName>
        <formula>If (ISPICKVAL(Activity_Type__c, &apos;Tour - Initial&apos;), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Tours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_utm_medium__c</fullName>
        <label>Form utm medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_utm_source__c</fullName>
        <label>Form utm source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_utm_content__c</fullName>
        <label>Form utm content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Form_utm_campaign__c</fullName>
        <label>Form utm campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Inquiries__c</fullName>
        <formula>If (BEGINS((TEXT( Activity_Type__c )),&apos;Inquiry&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Inquiries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Re_Inquiry_Source__c</fullName>
        <label>Inquiry Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Appointments__c</fullName>
        <formula>If ( Appointment__c , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Appointments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Appointments__c</fullName>
        <formula>If (BEGINS((TEXT( Activity_Type__c )),&apos;Appointment Initial&apos;), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Appointments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internet_Lead_Source__c</fullName>
        <label>Internet Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Complete_Date__c</fullName>
        <label>Activity Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Connected_Conversation__c</fullName>
        <formula>Text(Result_Code__c) = &apos;Completed&apos; &amp;&amp; System__c = false</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Connected Conversation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fire_Task_Roll_Up_Trigger__c</fullName>
        <label>Fire Task Roll Up Trigger</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>